Add YPIBozeman FacilityId, change Dr Emerick and Nero to Bozeman location

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Business\Facility.Model\VAEasternColorado.cs" />
     <Compile Include="Business\Facility.Model\CBCI.cs" />
     <Compile Include="Business\Facility.Model\AssociatedDermatology.cs" />
+    <Compile Include="Business\Facility.Model\YellowstonePathologistBozeman.cs" />
     <Compile Include="Business\Flow\CytoplasmicMarkerMapping.cs" />
     <Compile Include="Business\Flow\CytoplasmicMarkerMappingCollection.cs" />
     <Compile Include="Business\HL7View\ADTMessage.cs" />
