ventana stain work

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>245</ApplicationRevision>
+    <ApplicationRevision>265</ApplicationRevision>
     <ApplicationVersion>10.1.7.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -312,6 +312,8 @@
     <Compile Include="Business\Billing.Model\PropertyChanges.cs" />
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule6.cs" />
     <Compile Include="Business\Client.Model\IdahoClientIdList.cs" />
+    <Compile Include="Business\Facility.Model\MyriadGeneticsLab.cs" />
+    <Compile Include="Business\Facility.Model\EasternColoradoHealthcare.cs" />
     <Compile Include="Business\Facility.Model\BeneifsHealthSystem.cs" />
     <Compile Include="Business\Facility.Model\WilliamsPorterDayLaw.cs" />
     <Compile Include="Business\Facility.Model\CastleBiosciences.cs" />
