--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1214,6 +1214,7 @@
     <Compile Include="Business\Test\ComprehensiveColonCancerProfile\ComprehensiveColonCancerProfileWPHOBXView.cs" />
     <Compile Include="Business\Test\ConstitutionalChromosomeAnalysis\ConstitutionalChromosomeAnalysisTest.cs" />
     <Compile Include="Business\Test\CXCR4MutationAnalysis\CXCR4MutationAnalysisTest.cs" />
+    <Compile Include="Business\Test\EGFRT790MLiquidBiopsy\EGFRT790MLiquidBiopsyTest.cs" />
     <Compile Include="Business\Test\ETV6RUNX1ByFish\ETV6RUNX1ByFishTest.cs" />
     <Compile Include="Business\Test\ETV6RUNX1ByPCR\ETV6RUNX1ByPCRTest.cs" />
     <Compile Include="Business\Test\EWSR1\EWSR1Test.cs" />
